--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 	<button id="forgotNumberButton" onclick="showForgotNumberModal()" disabled>忘記數字</button>
     <button id="showResultsButton" onclick="confirmShowResults()" disabled>公布結果</button>
-    <button id="resetButton" onclick="confirmReset()" disabled>重置</button>
+    <button id="resetButton" onclick="confirmReset()" disabled>重新開始</button>
 
     <div id="resultModal" class="modal">
         <div class="modal-content">
