--- a/index.html
+++ b/index.html
@@ -202,10 +202,289 @@
         let currentQuestion = '';
 
 const questions = [
-"說出一種文具。(最低是我最少用，最高是我最常用)",
 "在你的學生時代，上課時都瞞著老師做些甚麼？ (最低是最乖，最高是最搗蛋)",
 "說出一個大學科系。 (最低是最冷門，最高是最熱門)",
 "說出一種語言。(最低是最容易學習，最高是最難學習)",
+"你和朋友組了一個樂團，叫甚麼名字？(最低是最彆腳，最高是最屌)",
+"餐廳端上一到味道濃郁的新菜色，你會怎麼形容呢？(最低是最臭，最高是最香)",
+"所有人用手機拍一張自拍照，然後一起打開。(最低是最像素人，最高是最像網美)",
+"所有人表演打麻將拿到大四喜，期待自摸的模樣。(最低是最淡定，最高是最緊張)",
+"所有人假裝自己中彈。(最低是勉強撐住，最高是快傷重不治)",
+"所有人假裝自己一邊抽菸一邊寫作。(最低是最凝重，最高是最煩躁)",
+"所有人輪流道歉。(最低是最隨便，最高是最有誠意)",
+"所有人都假裝剛跑完百米，氣喘吁吁的樣子。(最低是最平靜，最高是最急促)",
+"所有人將遊戲盒小心翼翼地地給下一個人，假裝這是一個炸彈。(最低是最掉漆，最高是最小心)",
+"所有人輪流假裝準備上台演講。(最低是最焦慮，最高是最穩健)",
+"所有人一起用手機搜尋辦事時的背景音樂，然後輪流撥放。(最低是最煞風景，最高是最有情調)",
+"所有人一起用手機搜尋一張動物相關的圖片，然後同時打開。(最低是最普通，最高是最融化人心)",
+"所有人輪流對我說出「我不能沒有你」。(最低是最敷衍，最高是最真心)",
+"所有人一起用手機搜尋一張有趣的圖片，然後同時打開。(最低是最讓人會心一笑，最高是最爆笑)",
+"所有人輪流用肢體動作和表情表現出「做得好！」。(最低是最細微，最高是最誇張)",
+"所有人同時做出一個倒茶的動作。 (最低是最無聊，最高是最屌)",
+"所有人都受邀參加奧斯卡獎頒獎典禮，請輪流站起來假裝你要走過紅毯進入會場。 (最低是最無聊，最高是最炫泡)",
+"所有人假裝正在拿大鍋子炒菜。 (最低是最普通，最高是最誇張)",
+"假裝自己正在和工功夫大師學習武功。 (最低是最心不在焉，最高是最投入)",
+"有一群海盜襲擊了我們，所有人站起來假裝拿劍與海盜搏鬥。 (最低是最放棄，最高是最勇敢)",
+"請輪流站起來展示你的投籃技巧。 (最低是最不準，最高是最準)",
+"在一場年度最重要的會議中，你忘了把手機調成靜音而且突然響起，請輪流哼出你的手機鈴聲。 (最低是最正常，最高是最尷尬)",
+"將這張牌依序傳遞給每個人，每個人拿到牌時就假裝這是一張彩券，用表情表演你得到多少獎金。 (最低是最少，最高是最多)",
+"有好幾隻蜜蜂飛進了這個房間，所有人同時做出反應。(最低是最無動於衷，最高是最驚恐)",
+"所有人假裝自己站在鐵達尼號的船頭，大聲說出「我是世界之王！」(最低是最壓抑，最高是最熱情)",
+"每個人輪流唸出「鋼彈吊單槓，單槓盪鋼彈」(最低是最結巴，最高是最流利)",
+"將這張牌依序傳遞給每個人，每個人拿到牌時就假裝這是一張會員卡，向大家介紹一下這是甚麼卡。(最低是最爛，最高是最屌)",
+"大家假裝正坐在俯衝而下的雲霄飛車上，所有人同時做出臉部表情。(最低是最淡定，最高是最刺激)",
+"所有人一起用手機搜尋一張驚悚圖片，然後同時打開。(最低是普通驚悚，最高是最驚悚)",
+"所有人假裝都困在一台壞掉的電梯中。(最低是最平靜，最高是最恐慌)",
+"所有人同時解裝正在遛狗。(最低是最溫馴的小狗狗，最高是最失控的大狗)",
+"所有人正在假裝打呼。(最低是最輕聲，最高是最吵)",
+"將遊戲盒依序傳遞給每個人，每個人拿到盒子時就假裝這是你的生日禮物。(最低是最無動於衷，最高是最驚喜)",
+"將遊戲和依序傳遞給每個人，假裝這盒子是一隻巨大的狼蛛。(最低是最無動於衷，最高是最驚恐)",
+"將遊戲盒依序傳遞給每個人，假裝這盒子是一隻小動物。(最低是最危險，最高是最可愛)",
+"大家輪流用手觸碰遊戲盒，假裝它會發出高壓電。(最低是最無感，最高是最強電流)",
+"假裝所有人正坐在飛機上要準備玩跳傘，請輪流走向門口假裝你要離開機艙了。(最低是最無動於衷，最高是最驚恐)",
+"所有人假裝正在舉啞鈴。(最低是最輕，最高是最重)",
+"所有人同時表演妳和約會對象第一次吃飯時的吃相。(最低是最粗魯，最高是最優雅)",
+"所有人假裝正在參加考試，然後偷看藏在身上的小抄。(最低是最露出馬腳，最高是最不動聲色)",
+"所有人假裝正在參加考試，然後偷看隔壁同學的考卷。(最低是最露出馬腳，最高是最不動聲色)",
+"假裝你們剛剛都聽我講完一個笑話，輪流用肢體動作和表情做回應。(最低是最難笑，最高是笑最瘋)",
+"所有人輪流表演，掉了東西並砸到自己的腳。(最低是最無感，最高是最痛)",
+"所有人輪流表演打領帶。(最低是最笨拙，最高是最俐落)",
+"所有人輪流表演一套拳法。(最低是最笨拙，最高是最有氣勢)",
+"所有人輪流表演開槍制止嫌犯逃跑。(最低是最笨拙，最高是最帥氣)",
+"所有人一起裝出一副要打人的樣子。(最低是最可笑，最高是最嚇人)",
+"所有人正在吃拉麵。(最低是最安靜，最高是最吵)",
+"所有人假裝一起在健身房重訊。(最低是最支撐不住，最高是最游刃有餘)",
+"所有人假裝自己是幫派成員，輪流做出一個「幹掉那個人」手勢。(最低是最彆腳，最高是最凶狠)",
+"所有人都是歌唱比賽的評審，請輪流用肢體動作和表情評價選手的表現。(最低是最難聽，最高是最驚豔)",
+"假裝大家在郵局等叫號，請表演你等待的樣子。(最低是最有耐性，最高是最沒耐性)",
+"每個人假裝你們在賭撲克牌。(最低是牌最爛，最高是牌最大)",
+"所有人輪流表演穿上一件大風衣。(最低是最笨拙，最高是最颯爽)",
+"所有人假裝盒子裡裝著婚戒，輪流傳遞給下一個人並說出一句求婚詞。(最低是最冷場，最高是最動人)",
+"所有人同時做發聲練習。(最低是最低沉，最高是最高亢)",
+"所有人輪流唱出一首歌。(最低是最令我哀傷，最高是最令我快樂)",
+"所有人剛聽完我的演講，請大家以掌聲回應我。(最低是最不屑，最高是最熱烈)",
+"所有人輪流唱出經典副歌的這兩句「LET IT GO~ LET IT GO」(最低是最低音，最高是最高音)",
+"所有人同時表演打空氣鼓 (最低是最無聊，最高是最炫泡)",
+"所有人同時假裝彈鋼琴。(最低是最無聊，最高是最炫泡)",
+"所有人同時表演空氣吉他。 (最低是最無聊，最高是最炫泡)",
+"所有人同時假裝你正在一個交響樂團中表演某種樂器。(最低是最沒人在意的樂器，最高是最受矚目的樂器)",
+"你在路上拍了朋友的背，對方轉身你才發現認錯人，你會怎麼化解尷尬？(最低是最自然，最高是最瞎掰)",
+"說出一種禦寒的方法。(最低是我覺得最沒用，最高是我覺得最有用)",
+"說出一種消暑的方法。(最低是我覺得最沒用，最高是我覺得最有用)",
+"生命三要素是陽光、空氣和水，第四要素呢？(最低是最讓人翻白眼，最高是最合理)",
+"我最近去了警局，你認為是甚麼原因？(最低是最普通，最高是最令人意想不到)",
+"看到路邊有人在打小孩，你覺得其他路人會有甚麼反應？(最低是最多人的選擇，最高是最少人的選擇)",
+"說出一種停止打嗝的方法。(最低是最少見，最高是最常見)",
+"說出一種解決失眠的方法。(最低是最少見，最高是最常見)",
+"說出一種臭味。(最低是普通臭，最高是最臭)",
+"說出一項你今年完成的成就。(最低是最微小，最高是最自豪)",
+"說出一項生活中的環保習慣。(最低是你最少做到，最高是你最常做的)",
+"有人幫你開著電梯門，請用一句話表示感謝。(最低是最簡潔，最高是最誇張)",
+"說出一種職業。(最低是最穩定，最高是風險最高)",
+"說出一種防疫的習慣或是規定。(最低是最沒效果，最高是最有效果)",
+"說出一件你做過的好事。(最低是最微小，最高是幫助最多人)",
+"用一句話讓我馬上起床。 (最低是最沒效果，最高是最有效果)",
+"走在馬路上，有位喜憨兒向你推銷他自己烘焙的愛心餅乾，你要怎麼回應他？ (最低是最暖心，最高是最惡劣)",
+"說出一個台灣的縣市。(最低是讓我最無感，最高是我最喜歡)",
+"你的長途火車座位被霸佔了，你會怎樣請對方離開？(最低是最客氣，最高是最兇惡)",
+"你樓上鄰居有夠吵，他到底在幹嘛？(最低是最不讓你在意，最高是最讓你火大)",
+"請說出一種全新的電子設備。(最低是最滯銷，最高是最暢銷)",
+"十年後的某一天，你在路上碰到好久不見的我，你覺得我開口第一句會說甚麼？(最低是最普通，最高是最驚人)",
+"說出一個汽車品牌。(最低是我最不想買，最高是我最想購買)",
+"說出一種讓人昏倒的方法。(最低是最無效，最高是最有效)",
+"為姓王的朋友取個新名字。(最低是最丟臉，最高是最帥氣)",
+"為姓陳的朋友取個新名字。(最低是最丟臉，最高是最帥氣)",
+"你開著敞篷車，大聲放著音樂，是甚麼歌曲？(最低是最讓人皺眉，最高是最有共鳴)",
+"我在二手拍賣網站搶到了一個古董，是甚麼？(最低是最常見，最高是最不可思議)",
+"請說出一段臉書貼文的標題。(最低是最少讚，最高是最多讚)",
+"你偷偷打開我的電腦，看到的第一個瀏覽紀錄是甚麼？(最低是最合理，最高是最意想不到)",
+"請說出一句廣告詞來推銷你公司新推出的掃地機器人。(最低是最反效果，最高是最讓人想買)",
+"說出一種交通工具。(最低是最慢，最高是最快)",
+"當你半夜走在暗巷裡，聽到後面有個奇怪的聲響，轉頭看到了甚麼？(最低是最安心，最高是最驚恐)",
+"你中了樂透頭獎！在兌換之前，你要把彩券藏在哪裡？(最低是最糟糕，最高是最安全)",
+"你跑到警局報案，因為剛剛看到了甚麼案件？(最低是最大驚小怪，最高是最事關重大)",
+"快遞送來你網購的東西，但你發現下單的時候訂成了10倍的數量！你買了什麼？(最低是最慘，最高是最爽)",
+"你看到路邊有個小孩似乎迷路了，你要對他說甚麼？(最低是最能取得信任，最高是最嚇壞小孩)",
+"你在坐公車的時候突然聞到臭味，是甚麼造成的？(最低是最能接受，最高是最想逃離)",
+"你突然間控制不住，不小心在公共場合拉了肚子，是甚麼地方呢？(最低是最能接受，最高是最糟糕)",
+"這個遊戲設計師突然出現在這裡！請對她說一句話。(最低是最羞辱，最高是最讚賞)",
+"你們各自為我的生日派對帶來了一對神秘嘉賓，是誰呢？(最低是我最想趕走，最高是我最驚喜)",
+"你必須住在防疫旅館隔離14天，你決定完成一項甚麼挑戰呢？ (最低是最浪費時間，最高是最能自我成長)",
+"你正在晨跑，你身上穿了甚麼？(最低是最普通，最高是最引人注目)",
+"說出一項運動項目。(最低是我最厭惡，最高是我最喜愛)",
+"你在釣魚時釣起了一個魚以外的東西，那是甚麼？(最低是最普通，最高是最不可思議)",
+"說出一個你要把孩子託付給他/她養育的人物(真實或虛擬皆可)(最低是最糟的，最高是最棒的)",
+"你即將不久於人世，你希望告別式有怎樣的安排呢？(最低是最少見，最高是最常見)",
+"你喝茫了，拿起電話就打給岳母，你說了甚麼？ (最低是最閒話家常，最高是最問題發言)",
+"你正在與心儀的對象共進一頓浪漫美好的晚餐，這時餐廳想起了旋律，那是哪一首曲子？(最低是最煞風景，最高是最有情調)",
+"在IKEA為我挑選一個家具。(最低是最讓我疑惑，最高是最讓我開心)",
+"你在我家廁所發現一件平時不會出現在廁所的東西，那是甚麼？(最低是最合理，最高是最意想不到)",
+"校長打電話跟你說你的小孩在學校闖禍了，小朋友做了什麼？(最低是最輕微，最高是最嚴重)",
+"你們是我的同事，在例行檢查公司監視器畫面時，意外發現我單獨留在公司加班都在做什麼？ (最低是最尋常，最高是最不可告人)",
+"飛機要迫降了，身為機長你要向乘客廣播，請他們做好準備。(最低是最讓人放心，最高是最恐慌)",
+"你不小心將一個網路連結傳給了老闆，那是甚麼？(最低是最丟臉，最高是最專業)",
+"你開了一家自己的餐廳，叫甚麼名字？(最低是最沒人想來，最高是最吸引人)",
+"你有權決定現任總統卸任後的工作，你會怎麼安排？(最低是最不適任，最高是最適任)",
+"所有人假裝正在通過海關，請對檢查護照的人說一句話。(最低是最普通，最高是最會被扣留)",
+"你們覺得我應該當哪一種官員？(最低是最不適任，最高是最適任)",
+"你是公司的空降主管，請宣布一項你決定的新規定。(最低是最讓人反彈，最高是最受歡迎)",
+"假裝你們都是我的主管，現在要輪流向我說明為甚麼開除我。(最低是最真實的理由，最高是最瞎扯的理由)",
+"你的老闆宣布了一個新的公司規定，那是甚麼？(最低是最糟，最高是最讚)",
+"你是個圖書館員，民眾跟你反應館內有個怪人，那個人在幹嘛？(最低是最無傷大雅，最高是最好快報警)",
+"你們幫我報名了一項技能課程，是甚麼內容呢？(最低是我覺得最沒用，最高是我覺得最有幫助)",
+"我突然在聚餐場合發酒瘋，請問你會怎麼做？(最低是最合乎禮貌，最高是最強硬)",
+"我即將要在國慶儀式上演說，請描述我今天的穿著。(最低是最洽當，最高是最破格)",
+"說出一個舉辦派對的地點。(最低是最不合適，最高是最適合)",
+"本期時尚雜誌的封面人物是誰？(1會讓本期銷量最差，最高是最好)",
+"我們一起去參觀博物館，請說出一個展示品。(最低是最不感興趣，最高是最感興趣)",
+"說一個我沒去過的旅遊景點。(最低是我最沒興趣，最高是我最想去)",
+"說出一件旅行時會帶的物品。(最低是最沒必要，最高是最必要)",
+"分享一個你在旅行經驗中，看過印象深刻的景象。 (最低是最小巧精緻，最高是最雄偉壯觀)",
+"說出一項在周末進行的活動。(最低是你從來沒試過，最高是最常做)",
+"說出一個邀我出門的活動。(最低是我最意興闌珊，最高是我最迫不及待)",
+"說出一本你最近讀的書。 (最低是最打發時間，最高是最有啟發性)",
+"請幫我安排一個度假行程。(最低是我最沒興趣，最高是我最喜歡)",
+"說出一種紓解壓力的方式。 (最低是我最少用，最高是我最常用)",
+"說出一個游泳的地點。 (最低是最糟糕，最高是最棒)",
+"你坐在一班剛起飛的飛機上，機長開始廣播，他說了什麼？ (最低是最放心，最高是最驚人)",
+"說出一個地點。 (最低是你最想一直待著，最高是你最想離開)",
+"說出一個你必須在那裏度過餘生的國家。 (最低是最糟糕，最高是最棒)",
+"現在要結束這個遊戲了，你會說甚麼？ (最低是最想結束，最高是最不想結束)",
+"說出一款桌遊。 (最低是我最不喜歡，最高是我最喜歡)",
+"你是圖書館員，說出一本書名(真實或虛構皆可)。(最低是最沒人想看，最高是最難借到)",
+"請說出一本新書書名。(最低是最無聊，最高是最多人想看)",
+"你預訂了一間背包客旅社，當你打開房間，描述一下你看到的景象。(最低是最想退房，最高是最想一直住)",
+"請為我安排這周五晚上的活動。(最低是我最厭煩，最高是我最迫不及待)",
+"請說出一個全新的電視節目名稱。(最低是最無聊，最高是最多人想看)",
+"說出一部電影。(最低是最讓人無感，最高是最讓人心碎)",
+"我要搭乘一班15個小時的長途飛機，而且只能選一部電影反覆觀看，你會幫我選哪一部呢？(最低是我寧可不看，最高是我願意一看再看)",
+"描述你正在執導的電影。(最低是最沒人想看，最高是最被看好拿下奧斯卡)",
+"你要興建一個全新的主題樂園，主題是甚麼？(最低是最無聊，最高是最多人想來)",
+"說出一本書。(最低是最沒影響力，最高是對世界影響最大)",
+"請形容欣賞梵谷畫作《吶喊》的心情。(最低是最平靜，最高是最驚豔)",
+"說出一句動畫台詞。(最低是最冷門，最高是最熱門)",
+"請說出一個非現實的角色。(最低是體型最小，最高是體型最大)",
+"真沒想到！我竟然也有資格進入霍格華茲學習魔法，那我的麼法寵物會是甚麼呢？(最低是讓我最丟臉，最高是讓我最想炫耀)",
+"說出一隻寶可夢。(最低是我最厭惡，最高是我最喜愛)",
+"要和婚約對象的父母見第一次面，你會送怎樣的見面禮呢？(最低是最少見，最高是最常見)",
+"感謝好友們來參加你的婚禮，你會送出怎樣的婚禮小物呢？(最低是最少見，最高是最常見)",
+"你覺得我會用甚麼理由跟你借錢。(最低是最不可能，最高是最可能)",
+"描述你生命中的一個人。(最低是最讓你反感，最高是最讓你感激)",
+"輪流說出一個自己的優點。 (最低是不足掛齒，最高是非常自豪)",
+"描述我的一項優點。 (最低是我最不同意，最高是我最同意)",
+"描述我的一項缺點。(最低是我最不想改進，最高是最想改進)",
+"試著用一句情緒勒索的話逼迫我幫忙。 (最低是最不會理你，最高是我最吃這套)",
+"你的一位朋友最近生活遭逢巨變，你會怎麼安慰她？(最低是最反效果，最高是最能接住對方)",
+"描述一個環境。(最低是最讓我不舒服，最高是最讓我安心舒適)",
+"請說出我今天的星座運勢。(最低是最衰，最高是最爽)",
+"每個人輪流說出一個自己的缺點。(最低是最無傷大雅，最高是最持續困擾你)",
+"稱讚你左邊玩家的一項優點。(最低是最官腔，最高是最誠懇)",
+"在派對裡，用一句話把你右邊的玩家介紹給他暗戀的人。(最低是最掉七，最高是最助攻)",
+"請選擇一個迪士尼卡通中的人物來形容我。(最低是最不像，最高是最像)",
+"請說一句鼓勵我的話。 (最低是最溫和，最高是最誇張)",
+"你會在交友APP裡面怎麼介紹自己。 (最低是最糟糕，最高是最棒)",
+"說出一位形象與我最相符的名人。 (最低是我最不同意，最高是我最同意)",
+"說出一個讓我變得有異性緣的方法。 (最低是最合理，最高是最不合理)",
+"當我跟你說「走拉！我們去看球賽」，你會回答什麼？ (最低是最興奮，最高是最不屑)",
+"說出你給另一半取的暱稱。 (最低是最想分手，最高是最甜蜜)",
+"請用「形容詞+動物」來描述我。 (最低是最羞辱，最高是最讚賞)",
+"用一句話來搭訕我，你會怎麼說？(最低是讓我最反感，最高是讓我最心動)",
+"假裝左手邊的玩家跟你告白，你要如何回應。(最低是最冷淡，最高是最心動)",
+"說出一個遲到的理由。(最低是最老梗，最高是最不可思議)",
+"假裝我搭訕了你，你會怎麼回應？(最低是最冷淡，最高是最開心)",
+"你左邊的玩家外出度假，你幫忙照顧他們家的魚，但魚群莫名暴斃了，你要怎麼告知他這個結果。(最低是最冷血，最高是最同情)",
+"假裝你現在要跟我分手，請解釋原因。(最低是最瞎扯，最高是最誠懇)",
+"有一位朋友在FB上傳了一張你被拍得很醜的合照還TAG你，你會怎麼回應？(最低是最溫和，最高是最激烈)",
+"說出一段邂逅的橋段。(最低是最爛，最高是最浪漫)",
+"請跳選一份送給我的新婚禮物。(最低是我最可有可無，最高是我最夢寐以求)",
+"說出一個衝進婚禮現場大喊「停止這場婚禮！」的理由。(最低是最鬧場，最高是最有說服力)",
+"你到了第一次約會對象的房間，看到牆上有一張超大海報，是甚麼內容？(最低是與你最契合，最高是最好快閃)",
+"你們都送我一件有標語的T-SHIRT，上面寫了甚麼？(最低是我最不想穿，最高是我最想天天穿)",
+"今天要去朋友家過夜，你認為我會帶甚麼私人物品去？(最低是最常見，最高是最讓大家傻眼)",
+"你們第一次來到我家，竟然發現我的房間放滿了甚麼？(最低是最能預期，最高是最意外)",
+"說出一種壞習慣。(最低是你最願意坦承，最高是你最難啟齒)",
+"說出現場朋友的一種壞習慣。(最低是最還好，最高是最令你受不了)",
+"你和我大吵一架，你會把甚麼丟出窗外？(最低是讓我最不在意，最高是讓我最心碎)",
+"表演甚麼樂器會讓你最能吸引異性呢？(最低是最沒效果，最高是最有魅力)",
+"說出一種水果。(最低是我最不喜歡，最高是我最喜歡)",
+"說出一間你帶約會對象去吃的餐廳。(最低是最讓人翻白眼，最高是最讓人驚艷)",
+"說出一種自助餐的菜色。(最低是最多人討厭，最高是最多人喜歡)",
+"說出一種不是平常食用的動物。(最低是我最願意嘗試，最高是我餓死也不吃)",
+"你從一場爛醉中迷迷糊糊地醒來，然後突然意識到昨天你醉到做出一件事。 (最低是最普通，最高是最驚人)",
+"你今天買到一份上等的牛肉，會做出甚麼料理請我吃呢？(最低是我最沒興趣，最高是我最等不及)",
+"幫我選擇一種我必須連續吃一個禮拜的食物。(最低是最無法忍受，最高是最可以接受)",
+"送我一到甜點吧。(最低是我最厭惡，最高是我最喜愛)",
+"你參加了地獄廚房實境秀，你做了甚麼讓高登無法置信？(最低是最情有可原，最高是最該被罵到臭頭)",
+"請選擇一種料理當我今天的晚餐。(最低是最讓我倒胃，最高是最讓我開胃)",
+"中秋烤肉到了，每個人要負責一樣食材，你會帶甚麼來參加。(最低是最常見，最高是最詭異)",
+"一家一菜，每個人要負責一樣食材，你會帶甚麼來參加。(最低是最不受歡迎，最高是最受歡迎)",
+"每個人要負責帶一樣食材一起來煮火鍋，你會帶甚麼來？(最低是最常見，最高是最詭異)",
+"說出一種新的雞排口味。(最低是我最不想吃，最高是我最想吃)",
+"說出一種手搖杯飲料。(最低是最冷門，最高是最多人點)",
+"說出一種連鎖早餐店的餐點。(最低是最沒人氣，最高是最受歡迎)",
+"請用一句話向外國朋友介紹臭豆腐。(最低是最讓人反感，最高是最能說服對方嘗試)",
+"把一種正常食物列為違禁品。(最低是我最同意，最高是我最不同意)",
+"說出一種鹽酥雞攤的食物。(最低是我最不想點，最高是我最想點)",
+"你是一位市長，正在規劃興建一棟什麼樣的公共建築。(最低是最浪費公帑，最高是最受全民期待)",
+"你要企劃一個真人實境秀，主題會是甚麼？(最低是最沒吸引力，最高是最多人有興趣)",
+"你現在有權力直接通過並施行一項新的法律條文，請描述一下內容。(最低是最公正，最高是最自私)",
+"如果你可以讓這個世界產生一個更好的改變，那會是甚麼。(最低是最沒用，最高是最棒)",
+"如果你可以跟自己的寵物溝通，你會說什麼？(最低是最搞笑，最高是最溫馨)",
+"你覺得我下輩子想變成甚麼動物？(最低是我最不想要，最高是我最期待)",
+"如果你可以回到過去和10歲的自己說一句話，你會說甚麼 (最低是最沒用，最高是最有幫助)",
+"我是一位被你們抓到的間諜，現在要逼我說出機密的情報，請說出一個威脅我的方法。 (最低是最不可怕，最高是最可怕)",
+"請幫我挑選一套現在讓我換上的服裝。 (最低是我最討厭，最高是我最喜歡)",
+"八卦周刊報導一位名人凌晨被發現醉倒在路旁的水溝，你覺得會是誰？ (最低是最有可能，最高是最不可能)",
+"你是一名在調查兇殺案現場的警探，說說你找到了什麼樣的證物。 (最低是最能定罪，最高是最沒用)",
+"我是一位剛通過你們訓練的情報員，請指派我第一個任務。 (最低是最容易，最高是最困難)",
+"請描述一下我十年後會變成一個怎樣的人？ (最低是最糟糕，最高是最美好)",
+"當你去玩跳傘，正要打開降落傘時，發現你背的只是普通的背包，裡面裝了什麼？ (最低是最沒用，最高是最能救命)",
+"我們都是正在製作人工智能機械人的科學家，請說出你將為機械人設定的主要人格。(最低是最糟糕，最高是最美好)",
+"描述一種各國政府聯合起來隱瞞的陰謀論。(最低是最輕微，最高是最驚悚)",
+"你竟然撿到了一個多拉A夢的道具，是哪一個？(最低是我最想丟掉，最高是我最想要)",
+"你是一個降落地球的外星人，現在遇到第一個人類，你會做甚麼？(最低是最具敵意，最高是最友善)",
+"安靜！遊戲盒裡好像傳出說話聲，將盒子依序傳遞給每個人，聽聽看那個聲音說了甚麼？(最低是最無聊，最高是最驚悚)",
+"描述一個突然出現在我背後的東西。(最低是我最無動於衷，最高是我馬上逃跑)",
+"描述一個會讓我嚇到的場警。(最低是最無聊，最高是最讓我驚恐)",
+"你是正在逃亡的通緝犯，必須在半徑一公里內找到藏身處，你會躲在哪裡？(最低是最快被發現，最高是最難被發現)",
+"你不幸地被困在一座無人島上，你希望誰在你身邊？(最低是最沒用，最高是最有幫助)",
+"總統突然打電話給你，會是甚麼消息呢？(最低是最糟糕，最高是最驚喜)",
+"你乘坐的熱氣球故障了，開始加速下墜，你要把甚麼丟出熱氣球來避免墜毀？(最低是最沒幫助，最高是最能減重)",
+"你正在幫蝙蝠俠設計新的蝙蝠車，除了潛水、自動駕駛和發射武器，還有甚麼功能？(最低是最沒用，最高是最有幫助)",
+"當我過世之後，我會去到一個被甚麼東西所環繞的世界？(最低是最地獄，最高是最天堂)",
+"你是電影編劇，你要怎麼設計大壞蛋在結局的死法？(最低是最蠢，最高是最酷)",
+"說出一位政治人物。(最低是我最想罷免，最高是我最不想罷免)",
+"一個小丑出現在你的面前，請描述他的臉。(最低是最讓人作惡夢，最高是最讓人發笑)",
+"說出一種牙齒掉下來的原因。(最低是最常見，最高是最不可思議)",
+"如果可以將一位已過世的名人復活，你會選誰？(最低是最浪費，最高是大家最期待)",
+"如果可以帶著一樣物品回到史前時代，你會選擇甚麼？(最低是最沒用，最高是最有用)",
+"如果現在把我永遠變成一個電影角色，你會選誰？(最低是我最厭惡，最高是我最喜愛)",
+"如果你有數不完的錢可以買下一樣東西，你會選甚麼？(最低是最吝嗇，最高是最闊綽)",
+"如果你可以過另一個人的人生，你會選擇誰？ (最低是最慘，最高是最爽)",
+"龜兔賽跑的烏龜腳受傷了，要找個動物代替烏龜比賽，要選誰呢？(最低是輸定了，最高是贏定了)",
+"根據尾巴的長度說出一種動物。 (最低是尾巴最短，最高是尾巴最長)",
+"你會幫寵物狗取什麼名字。 (最低是最無聊，最高是最炫泡)",
+"送一隻寵物給我。(最低是我最想丟掉，最高是我最想要)",
+"你的狗狗經過兩個月的訓練，說說牠現在會做甚麼？ (最低是最無聊，最高是最扯)",
+"你跑到學校挾持了一群學生，你的訴求是甚麼？(最低是最常見，最高是最無俚頭)",
+"你涉嫌參與昨天發生的一樁兇殺案，請問你昨天有任何不在場證明嗎？(最低是最無辜，最高是最可疑)",
+"我的照片出現在懸賞令上，我犯了甚麼罪呢？(最低是最不該被通緝，最高是最該死)",
+"說出一位演員(無論是否在世)扮演閻羅王，你會選擇誰？(最低是最不搭，最高是最渾然天成)",
+"請介紹Netflix的一檔新影集。(最低是最無聊，最高是最吸引人)",
+"手機響起，你拿起來一看是一位名人打給你，那是誰呢？(最低是最想掛斷，最高是最想接聽)",
+"我是一為突然現身在武林中的新人物，請描述一下我使用的武器和我的江湖稱號。(最低是最彆腳，最高是最帥氣)",
+"你發明了一款全新的智能內衣，有甚麼功能？(最低是最蠢，最高是最實用)",
+"描述一種新的節日與相關習俗儀式。(最低是最沒人在乎，最高是最會瘋傳全球)",
+"描述一台你發明的新家電，(最低是最滯銷，最高是最多人搶著買)",
+"你們本來要突襲我家帶來生日驚喜，卻撞見我在跟誰親熱？(最低是最合理，最高是最難以置信)",
+"描述一種情侶間的互動方式。(最低是最普通，最高是最扭曲)",
+"我早上起床發現身旁躺了一個完全想不到的人(真實人物)，那是誰？(最低是最驚嚇，最高是最驚喜)",
+"說出一個幽會的地點。(最低是最安全，最高是最刺激)",
+"你被捉姦在床，請說一句話來為自己辯護。(最低是最能被接受，最高是最反效果)",
+"所有人同時假裝自己在淋浴並搓洗身體。(最低是最平常，最高是最騷)",
+"所有人同時假裝自己裸體。(最低是最害羞，最高是最豪放)",
+"用一句話罵我或羞辱我。(最低是讓我有點受傷，最高是讓我馬上翻桌)",
+"我被劈腿了，請告訴我你是怎麼發現我的伴侶出軌。(最低是最委婉，最高是最讓我崩潰)",
         ];
 
 		showStartModal()
@@ -271,7 +550,7 @@ const questions = [
             const questionIndex = document.getElementById('questionSelect').value;
             currentQuestion = questions[questionIndex].replace('X', min).replace('Y', max);
             document.getElementById('currentQuestion').textContent = currentQuestion;
-			document.getElementById('reminder').textContent = '請點選抽個數字';
+			document.getElementById('reminder').textContent = '請輪流點選抽個數字';
             resetGame(min, max);
             closeModal('rangeModal');
 			
@@ -304,8 +583,8 @@ const questions = [
             const index = Math.floor(Math.random() * numbers.length);
             currentNumber = numbers[index];
             numbers.splice(index, 1);
-            document.getElementById('result').textContent = currentNumber;
-            document.getElementById('currentCode').textContent = currentCode;
+            document.getElementById('result').textContent = "數字："+currentNumber;
+            document.getElementById('currentCode').textContent = "玩家"+currentCode;
             results[currentCode] = currentNumber;
             currentCode = String.fromCharCode(currentCode.charCodeAt(0) + 1);
 			
