--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ const questions = [
 "所有人同時解裝正在遛狗。(最低是最溫馴的小狗狗，最高是最失控的大狗)",
 "所有人正在假裝打呼。(最低是最輕聲，最高是最吵)",
 "將遊戲盒依序傳遞給每個人，每個人拿到盒子時就假裝這是你的生日禮物。(最低是最無動於衷，最高是最驚喜)",
-"將遊戲和依序傳遞給每個人，假裝這盒子是一隻巨大的狼蛛。(最低是最無動於衷，最高是最驚恐)",
+"將遊戲盒依序傳遞給每個人，假裝這盒子是一隻巨大的狼蛛。(最低是最無動於衷，最高是最驚恐)",
 "將遊戲盒依序傳遞給每個人，假裝這盒子是一隻小動物。(最低是最危險，最高是最可愛)",
 "大家輪流用手觸碰遊戲盒，假裝它會發出高壓電。(最低是最無感，最高是最強電流)",
 "假裝所有人正坐在飛機上要準備玩跳傘，請輪流走向門口假裝你要離開機艙了。(最低是最無動於衷，最高是最驚恐)",
